fix slider circles alignment

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -162,7 +162,7 @@ body {
   .slide__circles {
     position: absolute;
     right: 1%;
-    top: 97%; }
+    top: 94%; }
   .slide__text {
     color: #696969;
     font-size: 1.6rem; }
