--- a/sass/_slider.scss
+++ b/sass/_slider.scss
@@ -23,12 +23,13 @@
     &__circles{
        position: absolute;
        right:1%;
-       top: 97%;
+       top: 94%;
     // bottom: 0;
     }
     &__text{
         color: $color-font-dark;
         font-size: 1.6rem;
+
     }
 }
 .slideshow{
